dev/test_programs/INVALID/group1/stmt24.go
package main;

func main(){
	func test(){
		var x int;
	}
}
